--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^4.1.1",
         "vue-router": "^4.2.5"
     }
 }
